# spot_micro_kinematics_cpp

./: CMakeLists.txt
include/spot_micro_kinematics/: spot_micro_kinematics.h  spot_micro_leg.h  utils.h
src/: spot_micro_kinematics.cpp  spot_micro_leg.cpp  utils.cpp
tests/: test_1.cpp  test_spot_micro_kinematics.cpp  test_spot_micro_leg.cpp  test_utils.cpp
